examples/parse_error/only_single_variadic_parameter.nbt
fn foo(l: Length…, t: Time…) -> Scalar
